[package]
name = "discordtelegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv_codegen = "0.15.0"
chrono = "0.4.19"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
#openssl = { version = "0.10", features = ["vendored"] } #turn this on if it does run while cross compiling

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "TRAVIS",
]